# recon-viewer

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.slnx  vcpkg.json
.github/workflows/: ci.yml
apps/cli/: CMakeLists.txt  main.cpp
apps/viewer/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/core/interfaces/: ISurfaceReconstructor.h
core/include/core/math/: Transforms.h  Vec3.h
core/include/core/types/: Mesh.h  PointCloud.h
core/src/math/: Vec3.cpp
core/src/types/: PointCloud.cpp
gpu/: CMakeLists.txt
gpu/include/gpu/: Context.h
gpu/src/: Context.cpp
io/: CMakeLists.txt
io/include/io/: IReader.h  IWriter.h  XyzReader.h  XyzWriter.h
io/src/: XyzReader.cpp  XyzWriter.cpp
main/: PointCloud.cpp  PointCloud.h  Vec3.cpp  Vec3.h  main.cpp  main.vcxproj  main.vcxproj.filters
render/: CMakeLists.txt
render/include/render/: OrbitCamera.h  PointRenderable.h  Renderer.h  Swapchain.h
render/shaders/: point.frag  point.vert  triangle.frag  triangle.vert
render/src/: PointRenderable.cpp  Renderer.cpp  Swapchain.cpp
tests/: CMakeLists.txt  core_tests.cpp  test_transforms.cpp
